src/test/ui/generic-associated-types/issue-74684-1.stderr
warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-74684-1.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error[E0597]: `a` does not live long enough
  --> $DIR/issue-74684-1.rs:16:26
   |
LL | fn bug<'a, T: ?Sized + Fun<F<'a> = [u8]>>(_ : Box<T>) -> &'static T::F<'a> {
   |        -- lifetime `'a` defined here
LL |     let a = [0; 1];
LL |     let _x = T::identity(&a);
   |              ------------^^-
   |              |           |
   |              |           borrowed value does not live long enough
   |              argument requires that `a` is borrowed for `'a`
...
LL | }
   | - `a` dropped here while still borrowed

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0597`.
